Added JUNIT package and several JUnit tests for classes

--- a/src/user/.gitignore
+++ b/src/user/.gitignore
@@ -4,3 +4,9 @@
 /Person.class
 /Courier.class
 /Manager.class
+/TestRestaurant.class
+/RestaurantTest.class
+/UserTest.class
+/PersonTest.class
+/CustomerTest.class
+/CourierTest.class
