--- a/src/user/.gitignore
+++ b/src/user/.gitignore
@@ -5,3 +5,8 @@
 /Courier.class
 /Manager.class
 /Location.class
+/CourierTest.class
+/CustomerTest.class
+/PersonTest.class
+/RestaurantTest.class
+/UserTest.class
