--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>OOP_Final_Project</name>
+	<name>fr.cs.group21.myFoodora</name>
 	<comment></comment>
 	<projects>
 	</projects>
